fixed zelda bow localization

--- a/assets/ssbrc/lang/en_us.json
+++ b/assets/ssbrc/lang/en_us.json
@@ -369,6 +369,8 @@
 	"ssbrc.tooltips.theLegendOfZelda.boomerang": "Boomerang",
 	"ssbrc.tooltips.theLegendOfZelda.boomerang.description.1": "] to throw",
 	"ssbrc.tooltips.theLegendOfZelda.boomerang.description.2": "- Always returns to the thrower",
+	"ssbrc.tooltips.theLegendOfZelda.fireArrow": "Fire Arrow",
+	"ssbrc.tooltips.theLegendOfZelda.poisonArrow": "Poison Arrow",
 	"ssbrc.fighters.link": "Link",
 	"ssbrc.fighters.link.skin.darkLink": "Dark Link",
 	"ssbrc.fighters.link.skin.goronTunic": "Goron Tunic",
