--- a/assets/ssbrc/lang/en_us.json
+++ b/assets/ssbrc/lang/en_us.json
@@ -157,7 +157,7 @@
 	"ssbrc.stageSelect.stageIndex": "Stage Index",
 	"ssbrc.stageSelect.votes": "Votes: ",
 	"ssbrc.stageSelect.voteMap": " has voted for ",
-	"ssbrc.stageSelect.voteRandom": "a random map! ",
+	"ssbrc.stageSelect.voteRandom": "a random map",
 	"ssbrc.stageSelect.voteMap.display": "! Votes: ",
 	"ssbrc.stageSelect.votesLocked": "All players voted!",
 
