--- a/assets/ssbrc/lang/es_LA_WIP.json
+++ b/assets/ssbrc/lang/es_LA_WIP.json
@@ -156,7 +156,7 @@
 	"ssbrc.stageSelect.stageIndex": "Stage Index",
 	"ssbrc.stageSelect.votes": "Votes: ",
 	"ssbrc.stageSelect.voteMap": " has voted for ",
-	"ssbrc.stageSelect.voteRandom": "a random map! ",
+	"ssbrc.stageSelect.voteRandom": "a random map",
 	"ssbrc.stageSelect.voteMap.display": "! Votes: ",
 	"ssbrc.stageSelect.votesLocked": "All players voted!",
 
