updated lang file

--- a/assets/ssbrc/lang/en_us.json
+++ b/assets/ssbrc/lang/en_us.json
@@ -656,7 +656,8 @@
 	"ssbrc.fighters.captainfalcon.skin.bloodFalcon": "Blood Falcon",
 	"ssbrc.fighters.captainfalcon.skin.rickWheeler": "Rick Wheeler",
 	"ssbrc.tooltips.captainfalcon.fistsOfFury": "Fists of Fury",
-	"ssbrc.tooltips.captainfalcon.fistsOfFury.description.1": "] to quickly dash forward, dealing damage and knocking opponents in the air",
+	"ssbrc.tooltips.captainfalcon.fistsOfFury.description.1": "] to quickly dash forward",
+	"ssbrc.tooltips.captainfalcon.fistsOfFury.description.2": "- Deals damage and knocks opponents into the air",
 	"ssbrc.tooltips.captainfalcon.falconPunch": "Falcon Punch",
 	"ssbrc.tooltips.captainfalcon.falconPunch.description.1": "] to prepare a massive punch",
 	"ssbrc.tooltips.captainfalcon.falconPunch.description.2": "- Deals massive damage if timed correctly",
