Added Pasta dev bio

--- a/assets/ssbrc/lang/en_us.json
+++ b/assets/ssbrc/lang/en_us.json
@@ -80,7 +80,7 @@
 	"ssbrc.lobby.credits.developerBio.davidtippy": "DavidTippy bio here",
 	"ssbrc.lobby.credits.developerBio.ricardo64": "Howdy, I’m Joe!! I like Mario and I do digital art and pixel art on occassion! I worked on textures for Alucard, Hero, Link, and Snake! Check out my art here: ",
 	"ssbrc.lobby.credits.developerBio.ricardo64Link": "[Cardd]",
-	"ssbrc.lobby.credits.developerBio.pastapower2k64": "PastaPower2K64 bio here",
+	"ssbrc.lobby.credits.developerBio.pastapower2k64": "Hey Paisanos, always remember the to leave your shoes outside at night. That way the Sole Goblins have something to eat.",
 
 	"ssbrc.lobby.leaderboard.toggle": "Click to toggle",
 
